--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,27 @@
   color: #61dafb;
 }
 
+h2, ul {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0 0 15px;
+  /* padding: 4px; */
+  box-shadow: 0 1px 3px rgba(20, 6, 6, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+li {
+  list-style: none;
+  margin-right: 6px;
+  color: #051620;
+}
+
+a {
+  text-decoration: none;
+  padding: 6px;
+  color: white;
+  background-color: black;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
